// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cyclus async 'should wait for start or stop method to resolve 1`] = `
SystemMap {
  "map": Object {
    "component1": Component1 {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
    },
    "component2": Component2 {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
    },
    "component3": Component3 {
      "__metadata": Object {
        "dependencies": Object {
          "component1": "component1",
          "component2": "component2",
        },
        "isInitialised": true,
      },
      "component1": Component1 {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
      },
      "component2": Component2 {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
      },
    },
  },
  "order": Array [
    "component2",
    "component1",
    "component3",
  ],
}
`;

exports[`cyclus async 'should wait for start or stop method to resolve 2`] = `
Array [
  "Start component 2 after 2000",
  "Start component 1 after 1000",
  "Start component 3",
]
`;

exports[`cyclus injecting dependencies correctly 'should work with map 1`] = `
SystemMap {
  "map": Object {
    "db": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "db",
          "scheduler": "sched",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "sched": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
  "order": Array [
    "sched",
    "db",
    "exampleComponent",
  ],
}
`;

exports[`cyclus lifecycle should start the system in order 1`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
]
`;

exports[`cyclus lifecycle should stop the system in reversed order 1`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop ExampleComponent",
  "Stop Database",
  "Stop Scheduler",
]
`;

exports[`cyclus lifecycle starting should be idempotent 1`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
]
`;

exports[`cyclus lifecycle stopping should be idempotent 1`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop ExampleComponent",
  "Stop Database",
  "Stop Scheduler",
]
`;

exports[`cyclus replacing dependencies on the fly 'should work correctly 1`] = `
SystemMap {
  "map": Object {
    "database": Database {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": Database {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
  "order": Array [
    "scheduler",
    "database",
    "exampleComponent",
  ],
}
`;

exports[`cyclus replacing dependencies on the fly 'should work correctly 2`] = `
SystemMap {
  "map": Object {
    "database": NewDatabase {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "dbConnection": "OPENED",
    },
    "exampleComponent": ExampleComponent {
      "__metadata": Object {
        "dependencies": Object {
          "database": "database",
          "scheduler": "scheduler",
        },
        "isInitialised": true,
      },
      "database": NewDatabase {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "dbConnection": "OPENED",
      },
      "scheduler": Scheduler {
        "__metadata": Object {
          "dependencies": Object {},
          "isInitialised": true,
        },
        "tick": 10,
      },
    },
    "scheduler": Scheduler {
      "__metadata": Object {
        "dependencies": Object {},
        "isInitialised": true,
      },
      "tick": 10,
    },
  },
  "order": Array [
    "scheduler",
    "database",
    "exampleComponent",
  ],
}
`;

exports[`cyclus replacing dependencies on the fly 'should work correctly 3`] = `
Array [
  "Start Scheduler",
  "Start Database",
  "Start ExampleComponent",
  "Stop Database",
  "Start NewDatabase",
]
`;
